--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 .image{
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -40,9 +40,8 @@
 }
 .below{
   background-color: brown;
-  width: 100%;
-  height: 80vh;
-  margin-top: 30px;
+
+color: aliceblue;
 }
 .text2{
   color: white;
@@ -51,15 +50,110 @@
   width: 80%;
   margin: auto;
 }
-.card{
-  text-align: center;
-  margin: auto;
-  justify-content: space-around;
-  display: flex;
-}
 .cards{
   transition-delay: 3s;
 }
 .cards:hover{
   transform: scale(1.1);
+}
+
+
+
+
+/* about */
+
+
+
+
+.image1{
+  width: 100%;
+  height: 90vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: grid;
+  place-items: center;
+}
+.article1{
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.header1{
+  /* font-size: 30px; */
+  color: red;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: fit-content;
+  margin: auto;
+}
+.text1about{
+  color: black;
+  text-align: center;
+  position: absolute;
+  top: 10%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: fit-content;
+  margin: auto;
+}
+.belowimage{
+  text-align: center;
+  margin: auto;
+  width: 90%;
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.imagebelowabout{
+  height: 90px;
+  border-radius: 20px;
+  margin: auto;
+}
+
+
+
+/* contact */
+
+.flex2{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  /* height: 60vh;  */
+}
+td,th{
+  padding-right:10px ;
+}
+table, th, td {
+  /* / border:2px solid black; / */
+  text-align: center;
+}
+#alert{
+  display: none;
+}
+p{
+
+  text-align: center;
+}
+th {
+  padding-left: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+#btn{
+visibility: hidden;
+
+}
+tr:nth-child(even){background-color: #f1f1f1;}
+tr:hover {background-color: #cecece;}
+td{
+  padding-left: 5px;
 }
