--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Home */
+
 .App-link {
   color: #61dafb;
 }
@@ -31,12 +33,19 @@
   position: relative;
   overflow: hidden;
 }
+.welcome{
+  background-color: orangered;
+  text-align: center;
+  color: white;
+  margin: auto;
+  margin-top: 10px;
+}
 .text1{
   text-align: center;
   margin: auto;
   color: orangered;
   font-size: xx-large;
-  width: 70%;
+  width: 95%;
 }
 .below{
   background-color: brown;
@@ -50,6 +59,7 @@ color: aliceblue;
   width: 80%;
   margin: auto;
 }
+
 .cards{
   transition-delay: 3s;
 }
@@ -84,7 +94,7 @@ color: aliceblue;
   color: red;
   text-align: center;
   position: absolute;
-  top: 0;
+  top:0px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -95,7 +105,10 @@ color: aliceblue;
   color: black;
   text-align: center;
   position: absolute;
-  top: 10%;
+  width: 80%;
+  font-size: 19px;
+  font-weight: bolder;
+  top: 30%;
   bottom: 0;
   left: 0;
   right: 0;
@@ -124,10 +137,9 @@ color: aliceblue;
   display: flex;
   justify-content: center;
   margin-top: 10px;
-  /* height: 60vh;  */
 }
 td,th{
-  padding-right:10px ;
+  padding-right:30px ;
 }
 table, th, td {
   /* / border:2px solid black; / */
