--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -59,6 +59,18 @@ li {
   grid-column: 4/5;
 }
 
+.vipul:hover{
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1);
+}
+
+.link:hover{
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1);
+}
+
 .social-media ul {
   height: 10rem;
   display: grid;
